--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,35 @@ jobs:
             ./publish/appsettings.json
           retention-days: 7
 
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')  # Only run on version tags
+
+    permissions:
+      contents: write  # Required to create releases
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: PowerPositionService-win-x64
+          path: ./artifacts
+
+      - name: Create zip archive
+        run: |
+          cd ./artifacts
+          zip -r ../PowerPositionService-win-x64.zip .
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            PowerPositionService-win-x64.zip
+          generate_release_notes: true
+          draft: false
+          prerelease: ${{ contains(github.ref, '-rc') || contains(github.ref, '-beta') || contains(github.ref, '-alpha') }}
+
   # docker:
   #   runs-on: ubuntu-latest
   #   needs: build
